--- a/src/robot/control/CMakeLists.txt
+++ b/src/robot/control/CMakeLists.txt
@@ -45,9 +45,6 @@ install(TARGETS
   control_node
   DESTINATION lib/${PROJECT_NAME})
 
-# Copy launch and config files to installation location
-install(DIRECTORY
-  config
-  DESTINATION share/${PROJECT_NAME})
+# No config files to install
 
 ament_package()
